@@ -478,6 +478,7 @@
 \<^scala_type>          argument: cartouche
 \<^session>             argument: cartouche
 \<^simproc>             argument: cartouche
+\<^simproc_setup>       argument: cartouche
 \<^sort>                argument: cartouche
 \<^syntax_const>        argument: cartouche
 \<^system_option>       argument: cartouche
